@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8330: Fix expected output in test_gdb.
+
 - Issue #8374: Update the internal alias table in the :mod:`locale` module
   to cover recent locale changes and additions.
 
